--- a/frontend/package.json
+++ b/frontend/package.json
@@ -82,6 +82,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
     "@craco/craco": "^7.1.0",
     "@eslint/js": "9.23.0",
     "autoprefixer": "^10.4.20",
@@ -93,4 +94,4 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
   }
-}
+
